# rag-system

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  init.sql  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml  test-backend.yml  test-docker-compose.yml  type-checking.yml
ai/: agent.py  dependencies.py  deps_builder.py  model.py  providers.py  summarize.py  vector_store.py
ai/prompts/: __init__.py  summary.py  system.py
ai/tools/: __init__.py  deep_think.py  factory.py  retrieve.py
api/dependencies/: agent.py  chat.py  document.py  health.py  message.py  provider.py  session.py  source.py  tool.py
api/routers/: __init__.py  chat.py  document.py  health.py  provider.py  session.py  source.py  tool.py
constants/: __init__.py  chat.py  collection.py  date.py  db.py  embeding.py  github.py  google.py  http.py  retrieve.py  summary.py
db/: sessions.py
db/connectors/: __init__.py  clickhouse.py  common.py  postgres.py
db/models/: __init__.py  document.py  message.py  provider.py  session.py  session_source.py  source.py  source_db.py  source_file.py
db/repositories/: __init__.py  base.py  document.py  message.py  provider.py  session.py  session_source.py  source.py  source_db.py  source_file.py
enums/: __init__.py  document.py  llm.py  provider.py  role.py  source.py  tool.py
exceptions/: __init__.py  document.py  provider.py  session.py  source.py
flows/: __init__.py  completion.py  deployment.py  indexing.py  pipeline.py  process_document.py  process_source.py  source_loading.py  summarization.py  types.py
flows/db_processing/: __init__.py  indexing.py  loading.py
flows/file_processing/: __init__.py  extractors.py  indexing.py  loading.py
flows/process_source/: __init__.py  deployment.py  pipeline.py
flows/source_processing/: __init__.py  deployment.py  indexing.py  pipeline.py  source_loading.py
schemas/: __init__.py  chat.py  document.py  health.py  message.py  provider.py  session.py  source.py  tool.py
settings/: __init__.py  chroma.py  core.py  ollama.py  postgres.py  prefect.py  qdrant.py  redis.py  sentry.py
static/css/: style.css
static/js/: chat.js  main.js
templates/: chat.html  index.html
tests/: base.py  conftest.py
tests/factories/: __init__.py  base.py  document.py  message.py  provider.py  session.py  session_source.py  source.py  source_db.py  source_file.py
tests/test_ai/: test_deps_builder.py  test_retrieve.py  test_retrieve_tool.py  test_tools_factory.py
tests/test_api/: base.py  test_chat.py  test_document.py  test_health.py  test_provider.py  test_session.py  test_source.py  (+2 more)
ui/: api.py  api_client.py  app.py  components.py  exceptions.py  models.py  state.py  stream_parser.py  utils.py
usecases/: __init__.py  chat.py  document.py  health.py  message.py  provider.py  session.py  source.py  tool.py
utils/: __init__.py  crypto.py  redis.py
(+24 files in other folders)
